Add default styles

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,9 +1,9 @@
 {{as-calendar
-  title="Example Calendar"
+  title="Dummy Calendar"
   selections=selections
   occurrences=occurrences
   timeZone=timeZone
   onAddSelection="onCalendarAddSelection"
   onRemoveSelection="onCalendarRemoveSelection"
-  onToggleDaySelection="onCalendarToggleDaySelection"
+  onDayToggleSelection="onCalendarDayToggleSelection"
   tagName="div"}}
