--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -53,7 +53,7 @@
     <ul>
       {{#each day in days}}
         <li style={{dayStyle}}>
-          {{as-calendar/header-day day=day calendar=this isSelectedChange="dayIsSelectedChange"}}
+          {{as-calendar/header-day day=day calendar=this onToggleSelection="onDayToggleSelection"}}
         </li>
       {{/each}}
     </ul>
