--- a/app/styles/addons/ember-calendar/components/as-calendar/_header-day.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_header-day.scss
@@ -6,7 +6,7 @@ $calendar-day-checkbox-color: $calendar-occurrence-selection-color;
   border-color: $calendar-day-checkbox-color;
 }
 
-.calendar-day-checkbox {
+.as-calendar-day-checkbox {
   line-height: 0;
   padding: $column-gutter / 4 0;
   width: 100%;
