--- a/app/styles/addons/ember-calendar/components/as-calendar/_occurrence.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_occurrence.scss
@@ -1,4 +1,4 @@
-.calendar-occurrence {
+.as-calendar-occurrence {
   background-color: rgba($calendar-occurrence-color, .8);
   border: 1px solid;
   border-color: $calendar-occurrence-color;
