--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -5,5 +5,5 @@
   timeZone=timeZone
   onAddSelection="onCalendarAddSelection"
   onRemoveSelection="onCalendarRemoveSelection"
-  onDayToggleSelection="onCalendarDayToggleSelection"
+  dayIsSelectedChange="onCalendarDayToggleSelection"
   tagName="div"}}
