--- a/app/templates/components/as-calendar/occurrence.hbs
+++ b/app/templates/components/as-calendar/occurrence.hbs
@@ -1,8 +1,9 @@
-<a {{action "delete" bubbles=false}} class="delete"></a>
+{{#if headerTemplateName}}
+  {{partial headerTemplateName}}
+{{/if}}
 
 <div class="time-interval" style={{lineStyle}}>
   {{timeInterval}}
 </div>
 
 <h1 style={{lineStyle}}>{{occurrence.title}}</h1>
-<div class="resize-handle"></div>
