--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,9 +1,5 @@
 {{as-calendar
-  title="Dummy Calendar"
-  selections=selections
+  title="Ember Calendar"
   occurrences=occurrences
-  timeZone=timeZone
-  onAddSelection="onCalendarAddSelection"
-  onRemoveSelection="onCalendarRemoveSelection"
-  dayIsSelectedChange="onCalendarDayToggleSelection"
-  tagName="div"}}
+  onAddOccurrence="onCalendarAddOccurrence"
+  onRemoveOccurrence="onCalendarRemoveOccurrence"}}
