--- a/app/templates/components/as-calendar/time-zone-select.hbs
+++ b/app/templates/components/as-calendar/time-zone-select.hbs
@@ -1,6 +1,6 @@
 {{#rl-dropdown-container class="dropdown-search"}}
   {{#rl-dropdown-toggle tagName="a" class="toggle"}}
-    <span>{{selectedTimeZoneOption.abbreviation}}</span>
+    <span>{{selectedOption.abbreviation}}</span>
     <i></i>
   {{/rl-dropdown-toggle}}
 
