Refactor duration parameters to be parsed as strings

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,5 +1,8 @@
 {{as-calendar
   title="Ember Calendar"
   occurrences=occurrences
+  dayStartingTime="9:00"
+  dayEndingTime="18:00"
+  timeSlotDuration="00:30"
   onAddOccurrence="onCalendarAddOccurrence"
   onRemoveOccurrence="onCalendarRemoveOccurrence"}}
