Temporarily remove unused files, refactor time zone select

--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -23,8 +23,9 @@
 <section class="days">
   <header>
     {{as-calendar/time-zone-select
-      timeZone=timeZone
-      onSelectOption="onSelectTimeZone"}}
+      value=timeZone
+      onChangeValue="onChangeTimeZone"
+      defaultRegexp=defaultTimeZoneRegexp}}
 
     <div class="all-day-label">All Day</div>
 
