--- a/app/styles/addons/ember-calendar/components/as-calendar/_day.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_day.scss
@@ -1,5 +1,5 @@
 $calendar-day-checkbox-size: 18px;
-$calendar-day-checkbox-color: $calendar-occurrence-selection-color;
+$calendar-day-checkbox-color: $alert-color;
 
 @mixin calendar-day-hovered-checkbox {
   background-color: rgba($calendar-day-checkbox-color, .8);
