--- a/app/styles/addons/ember-calendar/_global.scss
+++ b/app/styles/addons/ember-calendar/_global.scss
@@ -1,3 +1,20 @@
 body {
   cursor: inherit;
 }
+
+h1 {
+  margin: 0;
+}
+
+ul,
+li,
+ul li ul,
+ul li ul li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  line-height: $base-line-height;
+}
