--- a/app/styles/addons/ember-calendar/components/as-calendar/_time-zone-option.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_time-zone-option.scss
@@ -1,5 +1,8 @@
 .as-calendar-time-zone-option {
+  font-weight: $font-weight-normal;
+  color: $body-font-color;
+
   &.selected {
-    font-weight: $font-weight-bold !important;
+    font-weight: $font-weight-bold;
   }
 }
