--- a/app/styles/addons/ember-calendar/main.scss
+++ b/app/styles/addons/ember-calendar/main.scss
@@ -3,3 +3,4 @@
 @import 'components/as-calendar';
 @import 'components/as-calendar/day';
 @import 'components/as-calendar/time-zone-option';
+@import 'components/as-calendar/time-zone-select';
