Style time slots

--- a/app/styles/addons/ember-calendar/components/_as-calendar.scss
+++ b/app/styles/addons/ember-calendar/components/_as-calendar.scss
@@ -90,6 +90,10 @@
       }
     }
 
+    .time-slot-labels li:first-child {
+      color: transparent;
+    }
+
     .as-calendar-time-zone-select,
     .all-day-label,
     .as-calendar-day header h1,
