--- a/app/templates/components/as-calendar/day.hbs
+++ b/app/templates/components/as-calendar/day.hbs
@@ -7,8 +7,8 @@
   </div>
 </header>
 
-<ul>
+<ul class="time-slots">
   {{#each timeSlot in timeSlots}}
-    <li></li>
+    <li style={{timeSlotStyle}}></li>
   {{/each}}
 </ul>
