--- a/app/styles/addons/ember-calendar/main.scss
+++ b/app/styles/addons/ember-calendar/main.scss
@@ -2,6 +2,7 @@
 @import 'global';
 @import 'components/as-calendar';
 @import 'components/as-calendar/day-select';
+@import 'components/as-calendar/occurrence';
 @import 'components/as-calendar/time';
 @import 'components/as-calendar/time-zone-option';
 @import 'components/as-calendar/time-zone-select';
