Move border inside as-calendar-time

--- a/app/styles/addons/ember-calendar/components/_as-calendar.scss
+++ b/app/styles/addons/ember-calendar/components/_as-calendar.scss
@@ -111,17 +111,23 @@
     }
 
     .times > li {
-      border: 1px solid $global-section-border-color;
-      border-bottom: 0;
-      border-right: 0;
-      border-top-color: darken($global-section-border-color, 2%);
+      .as-calendar-time {
+        border: 1px solid $global-section-border-color;
+        border-bottom: 0;
+        border-right: 0;
+        border-top-color: darken($global-section-border-color, 2%);
+      }
 
       &:first-child {
-        border-top: 0;
+        .as-calendar-time {
+          border-top: 0;
+        }
       }
 
       &:nth-child(even) {
-        border-top-color: lighten($global-section-border-color, 3%);
+        .as-calendar-time {
+          border-top-color: lighten($global-section-border-color, 3%);
+        }
       }
     }
 
