Add selected class to day column

--- a/app/styles/addons/ember-calendar/components/_as-calendar.scss
+++ b/app/styles/addons/ember-calendar/components/_as-calendar.scss
@@ -108,6 +108,16 @@
 
     .days > ul > li {
       position: relative;
+
+      &.selected {
+        .as-calendar-occurrence {
+          opacity: .2;
+        }
+
+        * {
+          pointer-events: none;
+        }
+      }
     }
 
     .times > li {
