--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -1,104 +1,12 @@
-<header>
-  <h1>{{title}}</h1>
+{{#if hasBlock}}
+  {{yield model this}}
+{{else}}
+  {{as-calendar/header title=title model=model}}
 
-  <nav>
-    <ul>
-      <li>
-        <button class="previous-week" {{action "navigateWeek" -1}}></button>
-      </li>
-
-      <li>
-        <button disabled={{isInCurrentWeek}}
-          class="current-week"
-          {{action "goToCurrentWeek"}}>This Week</button>
-      </li>
-
-      <li>
-        <button class="next-week" {{action "navigateWeek" 1}}></button>
-      </li>
-    </ul>
-  </nav>
-</header>
-
-<section class="timed">
-  <div class="header columns">
-    <ul>
-      <li>
-        <div class="time-zone">
-          {{as-calendar/time-zone-select
-            value=timeZone
-            onChangeValue="onChangeTimeZone"
-            defaultRegexp=defaultTimeZoneRegexp}}
-        </div>
-
-        <div class="day-labels">
-          <ul>
-            {{#each day in days}}
-              <li>{{moment day.value "ddd D MMM"}}</li>
-            {{/each}}
-          </ul>
-        </div>
-      </li>
-
-      <li>
-        <div class="day-selects-label">
-          <span>All Day</span>
-        </div>
-
-        <div class="day-selects">
-          <ul>
-            {{#each day in days}}
-              <li>
-                {{as-calendar/day-select
-                  day=day
-                  onToggleSelect="onDayToggleSelect"}}
-              </li>
-            {{/each}}
-          </ul>
-        </div>
-      </li>
-    </ul>
-  </div>
-
-  <div class="content">
-    <div class="header rows">
-      <ul class="time-slot-labels" style={{timeSlotLabelListStyle}}>
-        {{#each timeSlot in labeledTimeSlots}}
-          <li style={{timeSlotLabelStyle}}>
-            {{moment timeSlot.value "h A"}}
-          </li>
-        {{/each}}
-      </ul>
-    </div>
-
-    <div class="days">
-      <ul>
-        {{#each day in days}}
-          <li class={{if day.isSelected "selected"}}>
-            <ul class="times">
-              {{#each timeSlot in timeSlots}}
-                <li>
-                  {{as-calendar/time
-                    day=day
-                    timeSlot=timeSlot
-                    timeSlotHeight=timeSlotHeight}}
-                </li>
-              {{/each}}
-            </ul>
-
-            <ul class="occurrences">
-              {{#each occurrence in day.occurrences}}
-                <li>
-                  {{as-calendar/occurrence
-                    occurrence=occurrence
-                    timeSlotHeight=timeSlotHeight
-                    timeSlotDuration=modelTimeSlotDuration}}
-                </li>
-              {{/each}}
-            </ul>
-          </li>
-        {{/each}}
-      </ul>
-    </div>
-  </div>
-</section>
+  {{as-calendar/timetable
+    model=model
+    timeZone=timeZone
+    timeSlotHeight=timeSlotHeight
+    defaultTimeZoneRegexp=defaultTimeZoneRegexp
+    onChangeTimeZone="onChangeTimetableTimeZone"}}
+{{/if}}
